# quicksign_technical_test

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  lint_module.sh  pyproject.toml  run_tests.sh
app/: exceptions.py  main.py  schemas.py  webservice.py
app/classifiers/cnn/: evaluator.py  metric_accumulator.py  predictor.py  simple_cnn.py  training.py
app/classifiers/cnn/checkpoints/: simple_cnn_binary.pt
app/classifiers/svm/: __init__.py  svm_classifier.py
app/classifiers/svm/models/: svm_hog_classifier.joblib
app/data/: data_loading.py
app/models/cnn/: evaluator.py  training.py
tests/: conftest.py  test_webservice.py
tests/test_classifiers/test_cnn/: test_metric_accumulator.py  test_predictor.py  test_training.py
tests/test_classifiers/test_svm/: test_svm_classifier.py
tests/test_data/: test_data_loading.py
tests/test_models/test_cnn/: test_metric_accumulator.py  test_training.py
