[tool.poetry]
name = "test-technique"
version = "0.1.0"
description = ""
authors = ["Quicksign"]
readme = "README.md"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.115.12"
uvicorn = "^0.34.0"
torch = "^2.7.0"
torchvision = "^0.22.0"
scikit-learn = "^1.6.1"
tqdm = "^4.67.1"
matplotlib = "^3.10.3"
tabulate = "^0.9.0"
scikit-image = "^0.25.2"
python-multipart = "^0.0.20"

[tool.poetry.group.dev.dependencies]
pre-commit = "^4.2.0"
ruff = "^0.11.11"
pytest = "^8.3.5"
httpx = "^0.28.1"
mypy = "^1.15.0"
pytest-cov = "^6.1.1"
codespell = "^2.4.1"
types-tabulate = "^0.9.0.20241207"

[tool.coverage.report]
show_missing = true
fail_under = 99
omit = ["**/tests/test_*.py","app/main.py"]

[tool.mypy]
python_version = "3.10"
namespace_packages = true
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.ruff]
line-length = 82

[tool.ruff.lint]
select = [
  "F",
  "E",
  "D",
  "I"
]
ignore = [
  "E501",
  "D107",
  "D104",
  "D103",
  "D102",
  "D101",
  "D100"
]

[tool.pytest.ini_options]
# addopts = "--cov=app --cov-report=term-missing"

[tool.ruff.lint.pydocstyle]
convention = "google"


[tools.poetry.dev]
[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
